# ellipse_simulator

./: Cargo.toml
src/: game.rs  main.rs
src/game/: ball.rs
src/math/: circle.rs  ellipse.rs  mod.rs  vec2.rs
