[package]
name = "ellipse_simulator"
version = "0.1.0"
edition = "2024"

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["gfx", "static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "2025.02.14" 

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }